reorganized server and created client app
